optimizations and making a card in index.html

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -47,6 +47,12 @@
             <label for="label" class="lable-text">Description</label>
             <textarea placeholder="Enter Description Here" name="description" rows="4" ></textarea><br>
 
+            <label for="avatar">Choose a profile picture:</label>
+
+            <input type="file"
+               id="avatar" name="image"
+               accept="image/png, image/jpeg">
+
             <input type="submit" value="Submit" class="submit-form">
         </div>
     </section>
