--- a/src/main/resources/templates/registration-complete.html
+++ b/src/main/resources/templates/registration-complete.html
@@ -1,18 +1,33 @@
 <!DOCTYPE html>
 <html xmlns:th="https://www.thymeleaf.org">
-<head>
-<meta charset="ISO-8859-1">
-<title>registered</title>
-</head>
-<body>
-
-
-<!-- do not remove-->
-<h1> Registration Complete</h1>
-<h2 th:text="${teacherName}">teacher name</h2>
-<h2 th:text="${title}">title</h2>
-<!--do not remove-->
-
-
-</body>
+    <head>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+              rel="stylesheet"
+              integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+              crossorigin="anonymous">
+        <meta charset="ISO-8859-1">
+        <title>registered</title>
+    </head>
+    <body>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+                crossorigin="anonymous"></script>
+        <h1> Registration Complete</h1>
+            <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title" th:text="${user.title}">Card title</h5>
+                    <p class="card-text" th:text="${user.description}">Book Description</p>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item" th:text="${user.teacherName}">Cras justo odio</li>
+                    <li class="list-group-item" th:text="${user.branch}">Dapibus ac facilisis in</li>
+                    <li class="list-group-item" th:text="${user.semester}">Vestibulum at eros</li>
+                </ul>
+                <div class="card-body">
+                    <a href="#" class="card-link">Done</a>
+                    <a href="#" class="card-link">Add Another</a>
+                </div>
+            </div>
+    </body>
 </html>
