--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-<form action="register" method="post">
-<section class="regestration">
+<form action="/register" method="post" enctype="multipart/form-data">
+<section class="registration">
     <div>
         <h2>Registration Form</h2>
             <label for="label" class="lable-text">Teacher Name</label>
@@ -47,17 +47,15 @@
             <label for="label" class="lable-text">Description</label>
             <textarea placeholder="Enter Description Here" name="description" rows="4" ></textarea><br>
 
-            <label for="avatar">Choose a profile picture:</label>
+            <label for="avatar">Choose a cover image :</label>
+            <input type="file" name="image"><br>
 
-            <input type="file"
-               id="avatar" name="image"
-               accept="image/png, image/jpeg">
+            <label for="avatar">Choose a pdf file:</label>
+            <input type="file" name="pdf"><br>
 
             <input type="submit" value="Submit" class="submit-form">
         </div>
     </section>
 </form>
-
 </body>
-
 </html>
