--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="script" href="script.css">
-    <title>Registration Form </title>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <script src="https://unpkg.com/pdfjs-dist/build/pdf.js"></script>
+    <title>Registration Form</title>
 </head>
 
 <body>
@@ -16,35 +14,61 @@
         <div>
             <h2>Registration Form</h2>
             <label for="label" class="lable-text">Teacher Name</label>
-            <input type="text" placeholder="Enter Teacher Name Here" name="teacherName" class="input-box"><br>
+            <input
+                    type="text"
+                    placeholder="Enter Teacher Name Here"
+                    name="teacherName"
+                    class="input-box"
+            /><br/>
 
             <label for="label" class="lable-text">Are you the author ? </label>
-            <input type="checkbox" placeholder="Enter Here" name="isAuthor" class="input-box"><br>
+            <input
+                    type="checkbox"
+                    placeholder="Enter Here"
+                    name="isAuthor"
+                    class="input-box"
+            /><br/>
 
             <label for="label" class="lable-text">Title</label>
-            <input type="text" placeholder="Enter Title Here" name="title" class="input-box"><br>
+            <input
+                    type="text"
+                    placeholder="Enter Title Here"
+                    name="title"
+                    class="input-box"
+            /><br/>
 
             <label for="label" class="lable-text">Branch</label>
-            <select name="branch" class="dropdown-box">
+            <select
+                    name="branch"
+                    class=""
+                    id="bran"
+                    onchange="getSub(this.value,document.getElementById('sem').value)"
+            >
                 <option value="CSE" selected>CSE</option>
                 <option value="IT">IT</option>
                 <option value="ECE">ECE</option>
                 <option value="ME">ME</option>
-            </select><br>
+            </select>
 
             <label for="label" class="lable-text">Type</label>
             <select name="type" class="dropdown-box">
                 <option value="NOTES" selected>NOTES</option>
-                <option value="BOOK" >BOOK</option>
+                <option value="BOOK">BOOK</option>
                 <option value="SMPL">SAMPLE PAPER</option>
                 <option value="SYLB">SYLLABUS</option>
                 <option value="ASMT">ASSIGNMENT</option>
                 <option value="PRFI">PRACTICAL FILE</option>
-            </select><br>
+            </select
+            ><br/>
 
             <label for="label" class="lable-text">Semester</label>
-            <select name="semester" class="dropdown-box">
-                <option value="1" selected>1</option>
+            <select
+                    name="semester"
+                    id="sem"
+                    class=""
+                    onchange="getSub(document.getElementById('bran').value,this.value)"
+            >
+                <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
                 <option value="4">4</option>
@@ -52,23 +76,152 @@
                 <option value="6">6</option>
                 <option value="7">7</option>
                 <option value="8">8</option>
-            </select><br>
+            </select>
 
-            <label for="label" class="lable-text">Subject Code</label>
-            <input type="text" placeholder="Enter Teacher Name Here" name="scode" class="input-box"><br>
+            <label for="label" class="lable-text">Subject</label>
+            <select id="search"></select
+            ><br/>
 
             <label for="label" class="lable-text">Description</label>
-            <textarea placeholder="Enter Description Here" name="description" rows="4"></textarea><br>
+            <textarea
+                    placeholder="Enter Description Here"
+                    name="description"
+                    rows="4"
+            ></textarea
+            ><br/>
 
-            <label for="avatar">Choose a cover image :</label>
-            <input type="file" name="image"><br>
+            <style>
+                .step {
+                    display: none;
+                }
 
-            <label for="avatar">Choose a pdf file:</label>
-            <input type="file" name="pdf"><br>
+                body {
+                    font-family: -apple-system, BlinkMacSystemFont, Helvetica, Arial,
+                    sans-serif;
+                }
+            </style>
 
-            <input type="submit" value="Submit" class="submit-form">
+            <div>
+                <form id="pdfUpload">
+                    <div class="step">
+                        <input
+                                type="file"
+                                id="the_pdf"
+                                accept=".pdf,application/pdf"
+                                oninput="showTab(1)"
+                                required
+                        />
+                    </div>
+
+                    <div class="step">
+                        <img id="pdf_preview"/>
+                        <span id="preview_msg">Preview loading</span>
+                    </div>
+
+                    <div class="step">
+                        <p>Some other information about you:</p>
+                        <input type="text" id="your_name"/>
+                    </div>
+
+                    <div style="padding-top: 48px"></div>
+                </form>
+            </div>
+            <canvas
+                    id="the-canvas"
+                    style="direction: ltr; display: none"
+            ></canvas>
+
+            <input type="submit" value="Submit" class="submit-form"/>
         </div>
     </section>
 </form>
+
+<script>
+    window.onload = function () {
+        getSub("CSE", "1");
+
+        var pdf = document.getElementById("the_pdf");
+        pdf.onchange = function (ev) {
+            document.getElementById("preview_msg").style.display = "unset";
+            file = document.getElementById("the_pdf").files[0];
+
+            fileReader = new FileReader();
+            fileReader.onload = function (ev) {
+                console.log("loading PDF");
+                pdfjsLib
+                    .getDocument({data: fileReader.result})
+                    .promise.then((pdf) => {
+                    pdf.getPage(1).then(function (page) {
+                        var desiredWidth = 100;
+                        var viewport = page.getViewport({scale: 1});
+                        var scale = desiredWidth / viewport.width;
+                        var scaledViewport = page.getViewport({scale: scale});
+
+                        var canvas = document.getElementById("the-canvas");
+                        var context = canvas.getContext("2d");
+
+                        canvas.height = scaledViewport.height;
+                        canvas.width = scaledViewport.width;
+
+                        var renderContext = {
+                            canvasContext: context,
+                            viewport: scaledViewport,
+                        };
+                        var renderTask = page.render(renderContext);
+                        renderTask.promise.then(function () {
+                            console.log("Page rendered");
+                            document.getElementById("preview_msg").style.display =
+                                "none";
+                            var png_data = canvas.toDataURL("image/png");
+                            document.getElementById("pdf_preview").src = png_data;
+                        });
+                    });
+                });
+            };
+            fileReader.readAsArrayBuffer(file);
+        };
+    };
+
+    async function getSub(branch, sem) {
+        const element = document.getElementById("search");
+        const api_url = "http://localhost:8082/search/getSubjects";
+
+        const response = await fetch(api_url, {
+            method: "POST",
+            body: JSON.stringify({
+                branch: branch,
+                sem: parseInt(sem),
+            }),
+        });
+
+        const data = await response.json();
+
+        element.options.length = 0;
+        for (i = 0; i < data.length; i++) {
+            createOption(element, data[i], data[i]);
+        }
+    }
+
+    function createOption(ddl, text, value) {
+        var opt = document.createElement("option");
+        opt.value = value;
+        opt.text = text;
+        ddl.options.add(opt);
+    }
+
+    ////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+    var currentTab = 0;
+    showTab(currentTab);
+    pdfjsLib.GlobalWorkerOptions.workerSrc =
+        "https://unpkg.com/pdfjs-dist/build/pdf.worker.js";
+
+    function showTab(n) {
+        var x = document.getElementsByClassName("step");
+        x[n].style.display = "block";
+        document.getElementById("prevBtn").style.display = "inline";
+    }
+
+</script>
 </body>
 </html>
