--- a/src/main/resources/templates/upload-page.html
+++ b/src/main/resources/templates/upload-page.html
@@ -94,10 +94,8 @@
             </div>
         </div>
     </section>
-
-
-
-
+    <script type="text/javascript" th:src="@{/scripts/get-subjects.js}"></script>
+    <script type="text/javascript" th:src="@{/scripts/load-preview.js}"></script>
 </body>
 
 </html>
