--- a/src/main/resources/templates/Search-page.html
+++ b/src/main/resources/templates/Search-page.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:schemaLocation="http://www.thymeleaf.org ">
 
 <head>
     <meta charset="UTF-8">
@@ -13,6 +14,7 @@
 </head>
 
 <body>
+
 
 <section class="search">
     <div class="container">
@@ -190,6 +192,7 @@
     <script type="text/javascript" th:src="@{/scripts/get-subjects.js}"></script>
     <script type="text/javascript" th:src="@{/scripts/load-preview.js}"></script>
 </body>
+
 </html>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
