--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      xsi:schemaLocation="http://www.thymeleaf.org ">>
+      xsi:schemaLocation="http://www.thymeleaf.org ">
 
 <head>
     <meta charset="UTF-8">
@@ -9,10 +9,12 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <title>Home</title>
 </head>
 
 <body>
+
     <section class="banner">
         <div class="container">
             <div class="row">
@@ -34,49 +36,107 @@
             </div>
         </div>
     </section>
-<section class="search">
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <h4 class="search-filter-label">Search</h4>
+
+
+<!--    <section class="search">-->
+<!--        <div class="container">-->
+<!--            <div class="row">-->
+<!--                <div class="col">-->
+<!--                    <h4 class="search-filter-label">Search</h4>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="row">-->
+<!--                <div class="col">-->
+<!--                    <label for="label" class="lable-text">Branch :</label>-->
+<!--                    <select name="" id="" class="dropdown-box">-->
+<!--                        <option value="" disabled selected>Select Branch</option>-->
+<!--                        <option value="CSE" selected>CSE</option>-->
+<!--                        <option value="IT">IT</option>-->
+<!--                        <option value="ECE">ECE</option>-->
+<!--                        <option value="ME">ME</option>-->
+<!--                    </select>-->
+<!--                </div>-->
+<!--                <div class="col">-->
+<!--                    <label for="label" class="lable-text">Semester :</label>-->
+<!--                    <select name="" id="options" class="dropdown-box">-->
+<!--                        <option value="" disabled selected>Select Semester</option>-->
+<!--                        <option value="sem 1">1</option>-->
+<!--                        <option value="sem 2">2</option>-->
+<!--                        <option value="sem 3">3</option>-->
+<!--                        <option value="sem 4">4</option>-->
+<!--                        <option value="sem 5">5</option>-->
+<!--                        <option value="sem 6">6</option>-->
+<!--                        <option value="sem 7">7</option>-->
+<!--                        <option value="sem 8">8</option>-->
+<!--                    </select>-->
+<!--                </div>-->
+<!--                <div class="col">-->
+<!--                    <label for="label" class="lable-text">Subject :</label>-->
+<!--                    <select name="" id="options" class="dropdown-box" placeleholder>-->
+<!--                        <option value="" disabled selected>Select Subject</option>-->
+<!--                        <option value="sem 1">1</option>-->
+<!--                        <option value="sem 2">2</option>-->
+<!--                        <option value="sem 3">3</option>-->
+<!--                        <option value="sem 4">4</option>-->
+<!--                        <option value="sem 5">5</option>-->
+<!--                        <option value="sem 6">6</option>-->
+<!--                        <option value="sem 7">7</option>-->
+<!--                        <option value="sem 8">8</option>-->
+<!--                    </select>-->
+<!--                </div>-->
+<!--                <div class="col">-->
+<!--                    <button class="search-btn">Go For It</button>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </section>-->
+
+
+    <section class="search">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h4 class="search-filter-label">Search</h4>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <label for="label" class="lable-text">Branch :</label>
+                    <select name="branch" id="bran" class="dropdown-box"
+                            onchange="getSub(this.value,document.getElementById('sem').value)">
+                        <option value="" disabled selected>Select Branch</option>
+                        <option value="CSE" selected>CSE</option>
+                        <option value="IT">IT</option>
+                        <option value="ECE">ECE</option>
+                        <option value="ME">ME</option>
+                    </select>
+                </div>
+                <div class="col">
+                    <label for="label" class="lable-text">Semester :</label>
+                    <select name="semester" id="sem" class="dropdown-box"
+                            onchange="getSub(document.getElementById('bran').value,this.value)">
+                        <option value="1" selected>1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                    </select>
+                </div>
+                <div class="col">
+                    <label for="label" class="lable-text">Subject :</label>
+                    <select id="search" class="dropdown-box"></select>
+                </div>
+                <div class="col">
+                    <button class="search-btn">Go For It</button>
+                </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col">
-                <label for="label" class="lable-text">Branch :</label>
-                <select name="branch" id="bran" class="dropdown-box"
-                        onchange="getSub(this.value,document.getElementById('sem').value)">
-                    <option value="" disabled selected>Select Branch</option>
-                    <option value="CSE" selected>CSE</option>
-                    <option value="IT">IT</option>
-                    <option value="ECE">ECE</option>
-                    <option value="ME">ME</option>
-                </select>
-            </div>
-            <div class="col">
-                <label for="label" class="lable-text">Semester :</label>
-                <select name="semester" id="sem" class="dropdown-box"
-                        onchange="getSub(document.getElementById('bran').value,this.value)">
-                    <option value="1" selected>1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                    <option value="6">6</option>
-                    <option value="7">7</option>
-                    <option value="8">8</option>
-                </select>
-            </div>
-            <div class="col">
-                <label for="label" class="lable-text">Subject :</label>
-                <select id="search" class="dropdown-box"></select>
-            </div>
-            <div class="col">
-                <button class="search-btn">Go For It</button>
-            </div>
-        </div>
-    </div>
-</section>
+    </section>
+
+
     <section class="notice">
         <div class="container">
             <div class="row">
@@ -159,7 +219,7 @@
         <div class="container">
             <div class="row">
                 <div class="col lft-img">
-                    <img src="D:\Minor project\Resources\Study-did.png" alt="">
+                    <img th:src="@{/images/home-Study-did.png}" alt="">
                 </div>
                 <div class="col rt-text">
                     <h3>About Us</h3>
@@ -175,18 +235,15 @@
         </div>
     </section>
 
-
-<script type="text/javascript" th:src="@{/scripts/get-subjects.js}"></script>
-<script type="text/javascript" th:src="@{/scripts/home-js.js}"></script>
-<!--<script th:src="static/scripts/get-subjects.js"></script>-->
-<!--<script th:src="static"></script>-->
+    <script type="text/javascript" th:src="@{/scripts/get-subjects.js}"></script>
+    <script type="text/javascript" th:src="@{/scripts/load-preview.js}"></script>
+    <script type="text/javascript" th:src="@{/scripts/home-js.js}"></script>
 </body>
 
 </html>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-
 
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;600;700;800&display=swap%27');
@@ -398,7 +455,7 @@
     }
 
     .about-us>.container>.row>.lft-img {
-        background-image: url('home-about-us-bg.png');
+        background-image: url('http://localhost:8082/images/home-about-us-bg.png');
         border-radius: 0 30px 30px 0;
         background-repeat: no-repeat;
         /* box-shadow: 0px 10px 24px rgba(0, 0, 0, 0.25); */
@@ -472,5 +529,3 @@
         transition: max-height 0.2s ease-out;
     }
 </style>
-
-<!-- accordion script ends -->
