--- a/src/main/resources/templates/upload-page.html
+++ b/src/main/resources/templates/upload-page.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html xmlns:th="http://www.thymeleaf.org" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:schemaLocation="http://www.thymeleaf.org ">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,132 +18,336 @@
     <section class="upload_banner">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3"><img src="upload-img/upload-1.png" alt=""></div>
+                <div class="col-lg-3">
+                    <img th:src="@{/images/upload-1.png}" alt=""></div>
                 <div class="col-lg-6">
                     <h1>Don't get <span>confused</span></h1>
                     <h1>Go and get your</h1>
 
                     <h1><span>Study material</span> easily.</h1>
                 </div>
-                <div class="col-lg-3"><img src="upload-img/bird.png" alt=""></div>
+                <div class="col-lg-3"><img th:src="@{/images/upload-bird.png}" alt=""></div>
             </div>
         </div>
     </section>
     <section class="border-space"></section>
     <section class="upload_form">
         <div class="container">
-            <div class="row">
-                <div class="col">
-                    <h3>File Upload Form</h3>
+            <div class="row uploadr">
+                <div class="col upload-headc">
+                    <h3 class="upload-head">File Upload Form</h3>
                     <form action="">
-                        <label for="">Name *</label>
-                        <input type="text" name="name" required> <br>
+                        <div class="row uinput-top upload-form-row">
+                            <div class="col">
+                                <label for="name" class="ulabel-text">Name *</label>
+                            </div>
+                            <div class="col">
+                                <input type="text" name="name" required class="uinput">
+                            </div>
+                        </div>
+                        <div class="row upload-form-row">
+                            <div class="col">
+                                <label for="title" class="ulabel-text">Title *</label>
+                            </div>
+                            <div class="col">
+                                <input type="text" name="title" required class="uinput">
+                            </div>
+                        </div>
 
-                        <label for="">Title *</label>
-                        <input type="text" name="title" required> <br>
+<!--                        <section class="search">-->
+<!--                            <div class="container">-->
+<!--                                <div class="row">-->
+<!--                                    <div class="col">-->
+<!--                                        <h4 class="search-filter-label">Search</h4>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                                <div class="row">-->
+<!--                                    <div class="col">-->
+<!--                                        <label for="label" class="lable-text">Branch :</label>-->
+<!--                                        <select name="branch" id="bran" class="dropdown-box"-->
+<!--                                                onchange="getSub(this.value,document.getElementById('sem').value)">-->
+<!--                                            <option value="" disabled selected>Select Branch</option>-->
+<!--                                            <option value="CSE" selected>CSE</option>-->
+<!--                                            <option value="IT">IT</option>-->
+<!--                                            <option value="ECE">ECE</option>-->
+<!--                                            <option value="ME">ME</option>-->
+<!--                                        </select>-->
+<!--                                    </div>-->
+<!--                                    <div class="col">-->
+<!--                                        <label for="label" class="lable-text">Semester :</label>-->
+<!--                                        <select name="semester" id="sem" class="dropdown-box"-->
+<!--                                                onchange="getSub(document.getElementById('bran').value,this.value)">-->
+<!--                                            <option value="1" selected>1</option>-->
+<!--                                            <option value="2">2</option>-->
+<!--                                            <option value="3">3</option>-->
+<!--                                            <option value="4">4</option>-->
+<!--                                            <option value="5">5</option>-->
+<!--                                            <option value="6">6</option>-->
+<!--                                            <option value="7">7</option>-->
+<!--                                            <option value="8">8</option>-->
+<!--                                        </select>-->
+<!--                                    </div>-->
+<!--                                    <div class="col">-->
+<!--                                        <label for="label" class="lable-text">Subject :</label>-->
+<!--                                        <select id="search" class="dropdown-box"></select>-->
+<!--                                    </div>-->
+<!--                                    <div class="col">-->
+<!--                                        <button class="search-btn">Go For It</button>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </section>-->
 
-                        <label for="label" class="label-text">Branch *</label>
-                        <select name="" id="" class="dropdown-box" required>
-                            <option value="" disabled selected>Select Branch</option>
-                            <option value="CSE" selected>CSE</option>
-                            <option value="IT">IT</option>
-                            <option value="ECE">ECE</option>
-                            <option value="ME">ME</option>
-                        </select> <br>
 
-                        <label for="label" class="label-text">Semester *</label>
-                        <select name="" id="options" class="dropdown-box" required>
-                            <option value="" disabled selected>Select Semester</option>
-                            <option value="sem 1">1</option>
-                            <option value="sem 2">2</option>
-                            <option value="sem 3">3</option>
-                            <option value="sem 4">4</option>
-                            <option value="sem 5">5</option>
-                            <option value="sem 6">6</option>
-                            <option value="sem 7">7</option>
-                            <option value="sem 8">8</option>
-                        </select> <br>
-
-                        <label for="label" class="label-text">Subject *</label>
-                        <select name="" id="options" class="dropdown-box" required>
-                            <option value="" disabled selected>Select Subject</option>
-                            <option value="sem 1">1</option>
-                            <option value="sem 2">2</option>
-                            <option value="sem 3">3</option>
-                            <option value="sem 4">4</option>
-                            <option value="sem 5">5</option>
-                            <option value="sem 6">6</option>
-                            <option value="sem 7">7</option>
-                            <option value="sem 8">8</option>
-                        </select> <br>
-
-                        <label for="label" class="label-text">Type *</label>
-                        <select name="" id="options" class="dropdown-box" required>
-                            <option value="" disabled selected>Select Type</option>
-                            <option value="notes">Notes</option>
-                            <option value="practical file">Practical file</option>
-                            <option value="question paper">Question paper</option>
-                            <option value="e-book">E-book</option>
-                            <option value="akash">Akash</option>
-                        </select> <br>
-
-                        <label for="label" class="label-text">Description </label>
-                        <textarea name="text-area" id="" cols="30" rows="8"></textarea>
+                        <div class="row upload-form-row">
+                            <div class="col">
+                                <label for="label" class="ulabel-text">Branch *</label>
+                            </div>
+                            <div class="col">
+                                <select name="branch" id="bran" class="dropdown-box"
+                                        onchange="getSub(this.value,document.getElementById('sem').value)">
+                                    <option value="" disabled selected>Select Branch</option>
+                                    <option value="CSE" selected>CSE</option>
+                                    <option value="IT">IT</option>
+                                    <option value="ECE">ECE</option>
+                                    <option value="ME">ME</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="row upload-form-row">
+                            <div class="col">
+                                <label for="label" class="ulabel-text">Semester *</label>
+                            </div>
+                            <div class="col">
+                                <select name="semester" id="sem" class="dropdown-box"
+                                        onchange="getSub(document.getElementById('bran').value,this.value)">
+                                    <option value="1" selected>1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                    <option value="7">7</option>
+                                    <option value="8">8</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="row upload-form-row">
+                            <div class="col">
+                                <label for="label" class="ulabel-text">Subject *</label>
+                            </div>
+                            <div class="col">
+                                <select id="search" class="dropdown-box"></select>
+                            </div>
+                        </div>
+                        <div class="row upload-form-row">
+                            <div class="col">
+                                <label for="label" class="ulabel-text">Type *</label>
+                            </div>
+                            <div class="col">
+                                <select name="type" id="options" class="dropdown-box uinput" required>
+                                    <option value="" disabled selected>Select Type</option>
+                                    <option value="notes">Notes</option>
+                                    <option value="practical file">Practical file</option>
+                                    <option value="question paper">Question paper</option>
+                                    <option value="e-book">E-book</option>
+                                    <option value="akash">Akash</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="row upload-form-row">
+                            <div class="col">
+                                <label for="label" class="ulabel-text">Description </label>
+                            </div>
+                            <div class="col">
+                                <textarea name="text-area" id="" cols="30" rows="8" class="uinput"></textarea>
+                            </div>
+                        </div>
+                        <div class="row upload-form-row">
+                            <div class="col">
+                                <label for="file" class="ulabel-text">File *</label>
+                            </div>
+                            <div class="col">
+                                <input type="file" class="uinput" accept="application/pdf" oninput="showTab(1)"required>
+<!--                                <img id="pdf_preview"/>-->
+<!--                                <span id="preview_msg">Preview loading</span>-->
+<!--                                <canvas-->
+<!--                                        id="the-canvas"-->
+<!--                                        style="direction: ltr; display: none"-->
+<!--                                ></canvas>-->
+                            </div>
+                        </div>
+                        <div class="row upload-form-row">
+                            <div class="col upload-btnc">
+                                <button class="upload-btn">Here You Go!</button>
+                            </div>
+                        </div>
                     </form>
                 </div>
             </div>
         </div>
     </section>
+
+
+<!--    <form id="pdfUpload">-->
+<!--        <div class="step">-->
+<!--            <input-->
+<!--                    type="file"-->
+<!--                    id="the_pdf"-->
+<!--                    accept=".pdf,application/pdf"-->
+<!--                    oninput="showTab(1)"-->
+<!--                    required-->
+<!--            />-->
+<!--        </div>-->
+
+<!--        <div class="step">-->
+<!--            <img id="pdf_preview"/>-->
+<!--            <span id="preview_msg">Preview loading</span>-->
+<!--        </div>-->
+
+<!--        <div class="step">-->
+<!--            <p>Some other information about you:</p>-->
+<!--            <input type="text" id="your_name"/>-->
+<!--        </div>-->
+
+<!--        <div style="padding-top: 48px"></div>-->
+<!--    </form>-->
+<!--    </div>-->
+<!--    <canvas-->
+<!--            id="the-canvas"-->
+<!--            style="direction: ltr; display: none"-->
+<!--    ></canvas>-->
+
+<!--    <input type="submit" value="Submit" class="submit-form"/>-->
+
+
+
+
+
     <script type="text/javascript" th:src="@{/scripts/get-subjects.js}"></script>
     <script type="text/javascript" th:src="@{/scripts/load-preview.js}"></script>
+
 </body>
 
 </html>
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;600;700;800&display=swap%27');
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;500;600;700;800&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;400;500;600;700;800&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@100;200;400;500;600;700;800&display=swap');
 
     .upload_banner {
         background: linear-gradient(256.13deg, #D0E3F0 20.43%, rgba(217, 217, 217, 0) 68.74%);
+        padding: 80px 0;
     }
 
+    .upload_banner>.container>.row>.col-lg-3 img{
+        width: 100%;
+    }
     .upload_banner>.container>.row>.col-lg-6 h1 {
         font-family: 'Merriweather';
         font-style: normal;
         font-weight: 900;
-        font-size: 70px;
+        font-size: 56px;
         line-height: 60px;
         color: #272444;
 
         text-shadow: 0px 5px 4px rgba(0, 0, 0, 0.25);
     }
     .upload_banner>.container>.row>.col-lg-6 {
-        padding: 50px 20px 20px 82px;
+        padding: 10px 20px 20px 40px;
     }
 
     .upload_banner>.container>.row>.col-lg-6 span {
         font-family: 'Merriweather';
         font-style: normal;
         font-weight: 900;
-        font-size: 70px;
+        font-size: 56px;
 
         color: #FF6525;
 
         text-shadow: 0px 5px 4px rgba(0, 0, 0, 0.25);
     }
 
-    .border-space{
+    .border-space {
         padding: 20px;
-    margin: 20px 0;
-    background-color: #e2e2e2;
-    }
-
-    .upload_form{
+        margin: 20px 0;
         background-color: #e2e2e2;
     }
-    .upload_form>.container>.row>.col{
+
+    .upload_form {
+        background-color: #e2e2e2;
+    }
+
+    .upload_form>.container>.row>.col {
         background-color: #ffffff;
         box-shadow: 66px 48px 55px 5px rgba(0, 0, 0, 0.19);
-border-radius: 30px;
+        border-radius: 30px;
+        padding: 40px 90px;
+        margin-top: -130px;
+    }
+
+    .uploadr {
+        width: 60%;
+        margin-left: auto;
+        margin-right: auto;
+        padding-bottom: 100px;
+    }
+
+    .ulabel-text {
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 23px;
+
+        color: #615B5B;
+    }
+
+    .uinput {
+        background: #FFFFFF;
+        border: 1px solid #EDE9E9;
+        box-shadow: 0px 6px 5px -4px rgba(0, 0, 0, 0.25);
+        border-radius: 2px;
+        padding: 8px 20px;
+        width: 100%;
+    }
+
+    .upload-btn {
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 21px;
+        line-height: 25px;
+
+        color: #FFFFFF;
+        padding: 14px 34px;
+
+        background: #F86363;
+        border-radius: 30px;
+        border: none;
+        margin-top: 20px;
+    }
+    .uinput-top{
+        margin-top: 30px;
+    }
+
+    .upload-head {
+        font-family: 'Crete Round';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 28px;
+        line-height: 66px;
+
+        color: #4D4B4B;
+        
+        border-bottom: 1px solid #4D4B4B;
+    } 
+    .upload-btnc{
+        text-align: center;
+    }
+    .upload-form-row{
+        align-items: center;
+        margin-bottom: 20px;
     }
 </style>
