Css fixed in pages and make it working

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -16,41 +16,41 @@
 
 <body>
 
-    <header class="main_header">
-        <div class="container repo_header">
-            <div class="col logo">
-                <a href=""><img src="Repo.Hmr.In logo.png" alt=""></a>
-            </div>
-            <div class="col home head_nav">
-                <a href="">
-                    <h3>Home</h3>
-                </a>
-            </div>
-            <div class="col uploads head_nav">
-                <a href="">
-                    <h3>Uploads</h3>
-                </a>
-            </div>
-            <div class="col updates head_nav">
-                <a href="">
-                    <h3>Updates</h3>
-                </a>
-            </div>
-            <div class="col about_us head_nav">
-                <a href="">
-                    <h3>About Us</h3>
-                </a>
-            </div>
-            <div class="col about_us head_nav">
-                <a href="">
-                    <h3>About Us</h3>
-                </a>
-            </div>
-            <div class="col sign_in_btn">
-                <a href=""><button>Sign In</button></a>
-            </div>
-        </div>
-    </header>
+<!--    <header class="main_header">-->
+<!--        <div class="container repo_header">-->
+<!--            <div class="col logo">-->
+<!--                <a href=""><img src="Repo.Hmr.In logo.png" alt=""></a>-->
+<!--            </div>-->
+<!--            <div class="col home head_nav">-->
+<!--                <a href="">-->
+<!--                    <h3>Home</h3>-->
+<!--                </a>-->
+<!--            </div>-->
+<!--            <div class="col uploads head_nav">-->
+<!--                <a href="">-->
+<!--                    <h3>Uploads</h3>-->
+<!--                </a>-->
+<!--            </div>-->
+<!--            <div class="col updates head_nav">-->
+<!--                <a href="">-->
+<!--                    <h3>Updates</h3>-->
+<!--                </a>-->
+<!--            </div>-->
+<!--            <div class="col about_us head_nav">-->
+<!--                <a href="">-->
+<!--                    <h3>About Us</h3>-->
+<!--                </a>-->
+<!--            </div>-->
+<!--            <div class="col about_us head_nav">-->
+<!--                <a href="">-->
+<!--                    <h3>About Us</h3>-->
+<!--                </a>-->
+<!--            </div>-->
+<!--            <div class="col sign_in_btn">-->
+<!--                <a href=""><button>Sign In</button></a>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </header>-->
 
 
 
