--- a/src/main/resources/templates/Search-page.html
+++ b/src/main/resources/templates/Search-page.html
@@ -14,7 +14,89 @@
 </head>
 
 <body>
+<header class="main_header">
+    <div class="container repo_header">
+        <div class="col logo">
+            <a href=""><img th:src="@{/images/Repo.Hmr.In-logo.png}" alt=""></a>
+        </div>
+        <div class="col home head_nav">
+            <a href="">
+                <h3>Home</h3>
+            </a>
+        </div>
+        <div class="col about_us head_nav">
+            <a href="">
+                <h3>Search</h3>
+            </a>
+        </div>
+        <div class="col uploads head_nav">
+            <a href="">
+                <h3>Uploads</h3>
+            </a>
+        </div>
+        <div class="col updates head_nav">
+            <a href="">
+                <h3>Updates</h3>
+            </a>
+        </div>
+        <div class="col about_us head_nav">
+            <a href="">
+                <h3>About Us</h3>
+            </a>
+        </div>
+        <div class="col sign_in_btn">
+            <a href="">
+                <button>Sign In</button>
+            </a>
+        </div>
+    </div>
+</header>
 
+<!--<section class="search">-->
+<!--    <div class="container">-->
+<!--        <div class="row">-->
+<!--            <div class="col">-->
+<!--                <h4 class="search-filter-label">Search</h4>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <form action="/search" method="post">-->
+<!--        <div class="row">-->
+<!--            <div class="col">-->
+<!--                <label for="label" class="lable-text">Branch :</label>-->
+<!--                <select name="branch" id="bran" class="dropdown-box"-->
+<!--                        onchange="getSub(this.value,document.getElementById('sem').value)">-->
+<!--                    <option value="" disabled selected>Select Branch</option>-->
+<!--                    <option value="CSE" selected>CSE</option>-->
+<!--                    <option value="IT">IT</option>-->
+<!--                    <option value="ECE">ECE</option>-->
+<!--                    <option value="ME">ME</option>-->
+<!--                </select>-->
+<!--            </div>-->
+<!--            <div class="col">-->
+<!--                <label for="label" class="lable-text">Semester :</label>-->
+<!--                <select name="semester" id="sem" class="dropdown-box"-->
+<!--                        onchange="getSub(document.getElementById('bran').value,this.value)">-->
+<!--                    <option value="1" selected>1</option>-->
+<!--                    <option value="2">2</option>-->
+<!--                    <option value="3">3</option>-->
+<!--                    <option value="4">4</option>-->
+<!--                    <option value="5">5</option>-->
+<!--                    <option value="6">6</option>-->
+<!--                    <option value="7">7</option>-->
+<!--                    <option value="8">8</option>-->
+<!--                </select>-->
+<!--            </div>-->
+<!--            <div class="col">-->
+<!--                <label for="label" class="lable-text">Subject :</label>-->
+<!--                <select id="search" class="dropdown-box" name="subjectCode"></select>-->
+<!--            </div>-->
+<!--            <div class="col">-->
+<!--                <input type="submit" value="Search" class="search-parameters"/>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        </form>-->
+<!--    </div>-->
+<!--</section>-->
 
 <section class="search">
     <div class="container">
@@ -23,7 +105,6 @@
                 <h4 class="search-filter-label">Search</h4>
             </div>
         </div>
-        <form action="/search" method="post">
         <div class="row">
             <div class="col">
                 <label for="label" class="lable-text">Branch :</label>
@@ -52,13 +133,12 @@
             </div>
             <div class="col">
                 <label for="label" class="lable-text">Subject :</label>
-                <select id="search" class="dropdown-box" name="subjectCode"></select>
+                <select id="search" class="dropdown-box"></select>
             </div>
             <div class="col">
-                <input type="submit" value="Search" class="search-parameters"/>
+                <button class="search-btn">Go For It</button>
             </div>
         </div>
-        </form>
     </div>
 </section>
     
@@ -103,27 +183,27 @@
             <span class="ebooks_heading">E-Books / </span>
             <div class="row">
                 <div class="col">
-                    <img src="D:\Minor project\Resources\Sample-image.png" alt="">
+                    <img th:src="@{/images/Sample-image.png}" alt="">
                     <h5 class="book-title">Title of book</h5>
                     <button> View </button>
                 </div>
                 <div class="col">
-                    <img src="D:\Minor project\Resources\Sample-image.png" alt="">
+                    <img th:src="@{/images/Sample-image.png}" alt="">
                     <h5 class="book-title">Title of book</h5>
                     <button> View </button>
                 </div>
                 <div class="col">
-                    <img src="D:\Minor project\Resources\Sample-image.png" alt="">
+                    <img th:src="@{/images/Sample-image.png}" alt="">
                     <h5 class="book-title">Title of book</h5>
                     <button> View </button>
                 </div>
                 <div class="col">
-                    <img src="D:\Minor project\Resources\Sample-image.png" alt="">
+                    <img th:src="@{/images/Sample-image.png}" alt="">
                     <h5 class="book-title">Title of book</h5>
                     <button> View </button>
                 </div>
                 <div class="col">
-                    <img src="D:\Minor project\Resources\Sample-image.png" alt="">
+                    <img th:src="@{/images/Sample-image.png}" alt="">
                     <h5 class="book-title">Title of book</h5>
                     <button> View </button>
                 </div>
@@ -135,27 +215,27 @@
             <span class="practical_files_heading">Practical Files / </span>
             <div class="row">
                 <div class="col">
-                    <img src="D:\Minor project\Resources\Sample-image.png" alt="">
+                    <img th:src="@{/images/Sample-image.png}" alt="">
                     <h5 class="book-title">Title of book</h5>
                     <button> View </button>
                 </div>
                 <div class="col">
-                    <img src="D:\Minor project\Resources\Sample-image.png" alt="">
+                    <img th:src="@{/images/Sample-image.png}" alt="">
                     <h5 class="book-title">Title of book</h5>
                     <button> View </button>
                 </div>
                 <div class="col">
-                    <img src="D:\Minor project\Resources\Sample-image.png" alt="">
+                    <img th:src="@{/images/Sample-image.png}" alt="">
                     <h5 class="book-title">Title of book</h5>
                     <button> View </button>
                 </div>
                 <div class="col">
-                    <img src="D:\Minor project\Resources\Sample-image.png" alt="">
+                    <img th:src="@{/images/Sample-image.png}" alt="">
                     <h5 class="book-title">Title of book</h5>
                     <button> View </button>
                 </div>
                 <div class="col">
-                    <img src="D:\Minor project\Resources\Sample-image.png" alt="">
+                    <img th:src="@{/images/Sample-image.png}" alt="">
                     <h5 class="book-title">Title of book</h5>
                     <button> View </button>
                 </div>
@@ -167,33 +247,47 @@
             <span class="previous_year_ppr_heading">Previous Year Question Papers / </span>
             <div class="row">
                 <div class="col">
-                    <img src="D:\Minor project\Resources\Sample-image.png" alt="">
+                    <img th:src="@{/images/Sample-image.png}" alt="">
                     <h5 class="book-title">Title of book</h5>
                     <button> View </button>
                 </div>
                 <div class="col">
-                    <img src="D:\Minor project\Resources\Sample-image.png" alt="">
+                    <img th:src="@{/images/Sample-image.png}" alt="">
                     <h5 class="book-title">Title of book</h5>
                     <button> View </button>
                 </div>
                 <div class="col">
-                    <img src="D:\Minor project\Resources\Sample-image.png" alt="">
+                    <img th:src="@{/images/Sample-image.png}" alt="">
                     <h5 class="book-title">Title of book</h5>
                     <button> View </button>
                 </div>
                 <div class="col">
-                    <img src="D:\Minor project\Resources\Sample-image.png" alt="">
+                    <img th:src="@{/images/Sample-image.png}" alt="">
                     <h5 class="book-title">Title of book</h5>
                     <button> View </button>
                 </div>
                 <div class="col">
-                    <img src="D:\Minor project\Resources\Sample-image.png" alt="">
+                    <img th:src="@{/images/Sample-image.png}" alt="">
                     <h5 class="book-title">Title of book</h5>
                     <button> View </button>
                 </div>
             </div>
         </div>
     </section>
+
+<footer class="footer_bg">
+    <div class="container">
+        <div class="row">
+            <h3 class="footer-text-heading">&copy; Repo.HMR.in 2022 - 2023</h3>
+        </div>
+        <div class="row">
+            <h3 class="footer-text-heading"><a href="">Privacy policy</a> | <a href="">Terms and Conditions</a></h3>
+        </div>
+        <div class="row">
+            <h3 class="footer-text-heading">Version 1.0</h3>
+        </div>
+    </div>
+</footer>
 
     <script type="text/javascript" th:src="@{/scripts/get-subjects.js}"></script>
     <script type="text/javascript" th:src="@{/scripts/load-preview.js}"></script>
@@ -210,6 +304,77 @@
     * {
         box-sizing: content-box;
     }
+
+    /*header css*/
+
+    .main_header {
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    .repo_header {
+        text-align: end;
+        padding: 24px 0px;
+        display: flex;
+        align-items: center;
+    }
+
+    .logo {
+        text-align: start;
+    }
+
+    .head_nav h3 {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 26px;
+        line-height: 30px;
+
+        color: rgba(62, 57, 57, 0.78);
+        margin-bottom: 0px;
+    }
+
+    .head_nav a {
+        text-decoration: none;
+    }
+
+    .sign_in_btn button {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 30px;
+
+        color: #FFFFFF;
+
+        background: #F86363;
+        border-radius: 20px;
+        border: none;
+
+        padding: 6px 26px;
+    }
+
+    /*header css*/
+
+
+
+    /*footer css*/
+
+    .footer_bg {
+        background-color: #ff7B44;
+        padding: 40px 0;
+    }
+
+    .footer-text-heading, a {
+        font-family: 'poppin';
+        font-style: normal;
+        font-weight: 900;
+        font-size: 30px;
+        line-height: 38px;
+
+        color: #FFFFFF;
+        text-align: center;
+    }
+    /*footer css*/
 
     .search {
         background-color: #F5F5F5;
@@ -345,6 +510,13 @@
     .ebooks>.container>.row>.col,
     .practical_files>.container>.row>.col {
         margin: 20px auto 20px;
+    }
+
+    .notes{
+        padding-top: 60px;
+    }
+    .previous_year_ppr{
+        padding-bottom: 90px;
     }
 
     
