--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -15,19 +15,19 @@
 
 <body>
 
-    <footer class="footer_bg">
-        <div class="coontainer">
-            <div class="row">
-                <h3 class="footer-text-heading">&copy; Repo.HMR.in 2022 - 2023</h3>
-            </div>
-            <div class="row">
-                <h3 class="footer-text-heading"><a href="">Privacy policy</a> | <a href="">Terms and Conditions</a></h3>
-            </div>
-            <div class="row">
-                <h3 class="footer-text-heading">Version 1.0</h3>
-            </div>
-        </div>
-    </footer>
+<!--    <footer class="footer_bg">-->
+<!--        <div class="coontainer">-->
+<!--            <div class="row">-->
+<!--                <h3 class="footer-text-heading">&copy; Repo.HMR.in 2022 - 2023</h3>-->
+<!--            </div>-->
+<!--            <div class="row">-->
+<!--                <h3 class="footer-text-heading"><a href="">Privacy policy</a> | <a href="">Terms and Conditions</a></h3>-->
+<!--            </div>-->
+<!--            <div class="row">-->
+<!--                <h3 class="footer-text-heading">Version 1.0</h3>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </footer>-->
 
 
 
