--- a/src/main/resources/templates/upload-page.html
+++ b/src/main/resources/templates/upload-page.html
@@ -13,21 +13,75 @@
 </head>
 
 <body>
-    <section class="upload_banner">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3">
-                    <img th:src="@{/images/upload-1.png}" alt=""></div>
-                <div class="col-lg-6">
-                    <h1>Don't get <span>confused</span></h1>
-                    <h1>Go and get your</h1>
-
-                    <h1><span>Study material</span> easily.</h1>
-                </div>
-                <div class="col-lg-3"><img th:src="@{/images/upload-bird.png}" alt=""></div>
-            </div>
+<header class="main_header">
+    <div class="container repo_header">
+        <div class="col logo">
+            <a href=""><img th:src="@{/images/Repo.Hmr.In-logo.png}" alt=""></a>
         </div>
-    </section>
+        <div class="col home head_nav">
+            <a href="">
+                <h3>Home</h3>
+            </a>
+        </div>
+        <div class="col about_us head_nav">
+            <a href="">
+                <h3>Search</h3>
+            </a>
+        </div>
+        <div class="col uploads head_nav">
+            <a href="">
+                <h3>Uploads</h3>
+            </a>
+        </div>
+        <div class="col updates head_nav">
+            <a href="">
+                <h3>Updates</h3>
+            </a>
+        </div>
+        <div class="col about_us head_nav">
+            <a href="">
+                <h3>About Us</h3>
+            </a>
+        </div>
+        <div class="col sign_in_btn">
+            <a href="">
+                <button>Sign In</button>
+            </a>
+        </div>
+    </div>
+</header>
+
+<!--    <section class="upload_banner">-->
+<!--        <div class="container">-->
+<!--            <div class="row">-->
+<!--                <div class="col-lg-3">-->
+<!--                    <img th:src="@{/images/upload-1.png}" alt=""></div>-->
+<!--                <div class="col-lg-6">-->
+<!--                    <h1>Don't get <span>confused</span></h1>-->
+<!--                    <h1>Go and get your</h1>-->
+<!--                    <h1><span>Study material</span> easily.</h1>-->
+<!--                </div>-->
+<!--                <div class="col-lg-3">
+                        <img th:src="@{/images/bird.png}" alt=""></div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </section>-->
+<section class="upload_banner">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3">
+                <img th:src="@{/images/upload-1.png}" alt=""></div>
+            <div class="col-lg-6">
+                <h1>Don't get <span>confused</span></h1>
+                <h1>Go and get your</h1>
+
+                <h1><span>Study material</span> easily.</h1>
+            </div>
+            <div class="col-lg-3">
+                <img th:src="@{/images/bird.png}" alt=""></div>
+        </div>
+    </div>
+</section>
 
     <section class="border-space"></section>
     <section class="upload_form">
@@ -59,7 +113,7 @@
                                 <label for="label" class="ulabel-text">Branch *</label>
                             </div>
                             <div class="col">
-                                <select name="branch" id="bran" class="dropdown-box"
+                                <select name="branch" id="bran" class="dropdown-box uinput"
                                         onchange="getSub(this.value,document.getElementById('sem').value)">
                                     <option value="" disabled selected>Select Branch</option>
                                     <option value="CSE" selected>CSE</option>
@@ -74,7 +128,7 @@
                                 <label for="label" class="ulabel-text">Semester *</label>
                             </div>
                             <div class="col">
-                                <select name="semester" id="sem" class="dropdown-box"
+                                <select name="semester" id="sem" class="dropdown-box uinput"
                                         onchange="getSub(document.getElementById('bran').value,this.value)">
                                     <option value="1" selected>1</option>
                                     <option value="2">2</option>
@@ -92,7 +146,7 @@
                                 <label for="label" class="ulabel-text">Subject *</label>
                             </div>
                             <div class="col">
-                                <select id="search" class="dropdown-box" name="scode"></select>
+                                <select id="search" class="dropdown-box uinput" name="scode" ></select>
                             </div>
                         </div>
                         <div class="row upload-form-row">
@@ -124,24 +178,41 @@
                             </div>
                             <div class="col">
                                         <input
+                                                class="uinput"
                                                 name="pdf"
                                                 type="file"
                                                 id="the_pdf"
                                                 accept=".pdf,application/pdf"
                                                 required
+
                                         />
                             </div>
                         </div>
-<!--                        <div class="row upload-form-row">-->
-<!--                            <div class="col upload-btnc">-->
-                                <input type="submit" value="Submit" class="submit-form"/>
-<!--                            </div>-->
-<!--                        </div>-->
+                        <div class="row upload-form-row">
+                            <div class="col upload-btnc">
+<!--                                <input type="submit" value="Here You Go!" class="submit-form"/>-->
+                                <button type="submit" value="Submit" class="upload-btn">Here You Go!</button>
+                            </div>
+                        </div>
                     </form>
                 </div>
             </div>
         </div>
     </section>
+
+<footer class="footer_bg">
+    <div class="container">
+        <div class="row">
+            <h3 class="footer-text-heading">&copy; Repo.HMR.in 2022 - 2023</h3>
+        </div>
+        <div class="row">
+            <h3 class="footer-text-heading"><a href="">Privacy policy</a> | <a href="">Terms and Conditions</a></h3>
+        </div>
+        <div class="row">
+            <h3 class="footer-text-heading">Version 1.0</h3>
+        </div>
+    </div>
+</footer>
 
 
 
@@ -168,6 +239,80 @@
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;500;600;700;800&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;400;500;600;700;800&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@100;200;400;500;600;700;800&display=swap');
+
+     /**{*/
+     /*    box-sizing: content-box;*/
+     /*}*/
+    /*header css*/
+
+    .main_header {
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    .repo_header {
+        text-align: end;
+        padding: 24px 0px;
+        display: flex;
+        align-items: center;
+    }
+
+    .logo {
+        text-align: start;
+    }
+
+    .head_nav h3 {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 26px;
+        line-height: 30px;
+
+        color: rgba(62, 57, 57, 0.78);
+        margin-bottom: 0px;
+    }
+
+    .head_nav a {
+        text-decoration: none;
+    }
+
+    .sign_in_btn button {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 30px;
+
+        color: #FFFFFF;
+
+        background: #F86363;
+        border-radius: 20px;
+        border: none;
+
+        padding: 6px 26px;
+    }
+
+    /*header css*/
+
+
+
+    /*footer css*/
+
+    .footer_bg {
+        background-color: #ff7B44;
+        padding: 40px 0;
+    }
+
+    .footer-text-heading, a {
+        font-family: 'poppin';
+        font-style: normal;
+        font-weight: 900;
+        font-size: 30px;
+        line-height: 38px;
+
+        color: #FFFFFF;
+        text-align: center;
+    }
+    /*footer css*/
 
     .upload_banner {
         background: linear-gradient(256.13deg, #D0E3F0 20.43%, rgba(217, 217, 217, 0) 68.74%);
