banner image fixed

--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -66,7 +66,7 @@
                     free of cost.
                     and You can also share your notes and help the students.
                 </p>
-                <a href="Search-page.html">
+                <a href="">
                     <button class="banner-btn">Learn More</button>
                 </a>
             </div>
@@ -393,6 +393,7 @@
 
     .banner > .container > .row {
         align-items: center;
+        margin-top: -12px;
     }
 
     .banner > .container > .row > .col h1 {
@@ -444,8 +445,15 @@
     .banner-right-bg {
         background-image: url('http://localhost:8082/images/home-hero-bg-vector.png');
         text-align: center;
-        background-position: right;
+        background-size: contain;
+        background-position: inherit;
+        background-repeat: no-repeat;
     }
+    .banner-right-bg img{
+        margin-top: 40px;
+    }
+
+
 
     .search {
         background-color: #F5F5F5;
